--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -10,8 +10,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
         android:name="edu.temple.audiobb.BookListFragment"
-        android:layout_width="957dp"
-        android:layout_height="864dp"
+        android:layout_width="960dp"
+        android:layout_height="750dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="-2dp" />
@@ -19,10 +19,20 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView2"
         android:name="edu.temple.audiobb.BookDetailsFragment"
-        android:layout_width="965dp"
-        android:layout_height="828dp"
+        android:layout_width="957dp"
+        android:layout_height="788dp"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="883dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="923dp" />
+
+    <Button
+        android:id="@+id/mainSearchButton"
+        android:layout_width="377dp"
+        android:layout_height="108dp"
+        android:text="Search"
+        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
