--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,31 +10,42 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
         android:name="edu.temple.audiobb.BookListFragment"
-        android:layout_width="317dp"
-        android:layout_height="412dp"
+        android:layout_width="258dp"
+        android:layout_height="402dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="1dp" />
+        tools:layout_editor_absoluteX="2dp" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView2"
         android:name="edu.temple.audiobb.BookDetailsFragment"
-        android:layout_width="322dp"
-        android:layout_height="412dp"
+        android:layout_width="259dp"
+        android:layout_height="400dp"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="410dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteX="466dp"
+        tools:layout_editor_absoluteY="4dp" />
 
-    <Button
-        android:id="@+id/mainSearchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="180dp"
-        android:text="Search"
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="201dp"
+        android:layout_height="49dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.01"
+        app:srcCompat="@android:drawable/ic_menu_search" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView4"
+        android:name="edu.temple.audiobb.ControlFragment"
+        android:layout_width="197dp"
+        android:layout_height="358dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/fragmentContainerView2"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/fragmentContainerView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
