--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -10,27 +10,41 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
         android:name="edu.temple.audiobb.BookListFragment"
-        android:layout_width="960dp"
-        android:layout_height="750dp"
+        android:layout_width="931dp"
+        android:layout_height="631dp"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-2dp" />
+        tools:layout_editor_absoluteX="13dp"
+        tools:layout_editor_absoluteY="711dp" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView2"
-        android:name="edu.temple.audiobb.BookDetailsFragment"
-        android:layout_width="957dp"
-        android:layout_height="788dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="923dp" />
+        android:id="@+id/fragmentContainerView5"
+        android:name="edu.temple.audiobb.ControlFragment"
+        android:layout_width="929dp"
+        android:layout_height="567dp"
+        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/mainSearchButton"
-        android:layout_width="377dp"
-        android:layout_height="108dp"
-        android:text="Search"
-        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView2"
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="781dp"
+        android:layout_height="134dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.402"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@android:drawable/ic_menu_search" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView6"
+        android:name="edu.temple.audiobb.ControlFragment"
+        android:layout_width="923dp"
+        android:layout_height="315dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
